force-app/main/default/objects/Login_Credential__c/Login_Credential__c.object-meta.xml
<CustomObject>
    <description>Object to hold the Salesforce login credentials.</description>
    <label>Login Credential</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Login Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>