force-app/main/default/objects/Login_Credential__c/fields/Custom_URL_For_Login__c.field-meta.xml
<CustomField>
    <fullName>Custom_URL_For_Login__c</fullName>
    <description>If org have custom url to login</description>
    <inlineHelpText>If org have custom url to login</inlineHelpText>
    <label>Custom URL For Login</label>
    <type>Url</type>
</CustomField>