force-app/main/default/objects/Login_Credential__c/fields/Is_Community_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Community_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Community User?</description>
    <inlineHelpText>Is Community User?</inlineHelpText>
    <label>Is Community User?</label>
    <type>Checkbox</type>
</CustomField>