force-app/main/default/objects/Login_Credential__c/fields/Is_Salesforce_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Is_Salesforce_Credentials__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is Salesforce Credentials?</description>
    <inlineHelpText>Is Salesforce Credentials?</inlineHelpText>
    <label>Is Salesforce Credentials?</label>
    <type>Checkbox</type>
</CustomField>