force-app/main/default/objects/Login_Credential__c/fields/Is_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Is_Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Sandbox?</description>
    <inlineHelpText>Is Sandbox?</inlineHelpText>
    <label>Is Sandbox?</label>
    <type>Checkbox</type>
</CustomField>