force-app/main/default/objects/Login_Credential__c/fields/Last_Validity_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_Validity_Check__c</fullName>
    <description>Last validity checked by user</description>
    <inlineHelpText>Last validity checked by user</inlineHelpText>
    <label>Last Validity Check</label>
    <type>DateTime</type>
</CustomField>