force-app/main/default/objects/Login_Credential__c/fields/Org_name__c.field-meta.xml
<CustomField>
    <fullName>Org_name__c</fullName>
    <description>Salesforce Org Name</description>
    <inlineHelpText>Salesforce Org Name</inlineHelpText>
    <label>Org name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>