force-app/main/default/objects/Login_Credential__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <description>Project name</description>
    <inlineHelpText>Project name</inlineHelpText>
    <label>Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>