force-app/main/default/objects/Login_Credential__c/fields/Security_Token__c.field-meta.xml
<CustomField>
    <fullName>Security_Token__c</fullName>
    <description>Security Token</description>
    <inlineHelpText>Security Token</inlineHelpText>
    <label>Security Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>