force-app/main/default/objects/Login_Credential__c/fields/User_Login__c.field-meta.xml
<CustomField>
    <fullName>User_Login__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Login</label>
    <referenceTo>User_Login__c</referenceTo>
    <relationshipLabel>Login Credentials</relationshipLabel>
    <relationshipName>Login_Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>