force-app/main/default/objects/Login_Credential__c/fields/Validity__c.field-meta.xml
<CustomField>
    <fullName>Validity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is record credentials valid.</description>
    <inlineHelpText>Is record credentials valid.</inlineHelpText>
    <label>Validity</label>
    <type>Checkbox</type>
</CustomField>