force-app/main/default/objects/Login_Credential__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Org_name__c</columns>
    <columns>Password__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Security_Token__c</columns>
    <columns>User_Login__c</columns>
    <columns>Username__c</columns>
    <columns>Validity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>